--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
 Django==5.1.1
+django-js-asset==2.2.0
+django-mptt==0.16.0
 djangorestframework==3.15.2
 iniconfig==2.0.0
+mysqlclient==2.2.4
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.3
